@@ -8,6 +8,7 @@
     * Stop showing the tune menu after connecting to the printer
     * Use the 2023-10-10 Raspberry Pi OS base image for the image builder
     * Decrease the severity of web server access log messages
+    * Add a way to download logs even on systemd journal based systems
 
 0.7.1rc1 (2023-08-10)
     * Fixed HTTP response status on HEAD request for non-existing files
